--- a/client/src/components/Quiz.css
+++ b/client/src/components/Quiz.css
@@ -1,6 +1,7 @@
 .finish-quiz {
     border: 3px solid black;  
     position: relative;
+    top: -50px;
     left: 85%;
     background-color: rgb(253, 148, 0);
     color: white;
@@ -29,12 +30,12 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     display: block;
-    margin-left: 60px;
+    margin-left: 72px;
     margin-top: 15px;
     margin-bottom: 5px;
 }
 
 .sub-title {
-    margin-left: 60px;
+    margin-left: 72px;
     font-weight: 400;
 }
